SERVER-54344 Reverted AtomicWord waitTimer addition

(cherry picked from commit f4943eead1c1a2fdd3d72bfec1ad966911019359)